Mejoras en documentación funcionalidades
