# src/dtos/CredentialRequestPasswordResetDto.ts
@@ -1,0 +1,3 @@
+export class CredentialRequestPasswordResetDto {
+  email: string = "";
+}
