# src/dtos/CredentialRequestPasswordResetResponseDto.ts
@@ -1,0 +1,5 @@
+export class CredentialRequestPasswordResetResponseDto {
+  email: string = "";
+  createdAt: Date = new Date();
+  expireAt: Date = new Date();
+}
