# src/dtos/CredentialResetPasswordDto.ts
@@ -1,0 +1,6 @@
+export class CredentialResetPasswordDto {
+  email: string = "";
+  token: string = "";
+  password: string = "";
+  confirmPassword: string = "";
+}
